fixed horizontal scroll on mobile

--- a/src/components/Main/components/Section/Section.css
+++ b/src/components/Main/components/Section/Section.css
@@ -3,7 +3,7 @@
   justify-content: flex-start;
   align-items: baseline;
   width: 85vw;
-  padding: 10px;
+  padding: 10px 0;
 }
 
 .title-container {
@@ -42,7 +42,6 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 100%;
   }
   .title-container {
     justify-content: center;
